--- a/src/createPool/createPoolPage.css
+++ b/src/createPool/createPoolPage.css
@@ -4,15 +4,92 @@
     align-items: center;
     align-content: center;
     margin-top: 8vh;
-}
-
-.poll-creator-main-container h1{
+    border-radius: 7px;
 }
 
 .pool-creator-main-form-container{
     margin-top: 5vh;
+    border-radius: 7px;
+    border-top: 4px solid gold;
     width: 80vh;
     height: 120vh;
     background: white;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
 }
+
+.pool-creator-main-form{
+    margin: 2vh;
+    margin-top: 4vh;
+}
+
+.pool-creator-main-form label{
+    margin-bottom: 1vh;
+}
+
+.pool-creator-main-form input{
+    height: 6vh;
+    width: 100%;
+    font-size: 2.3vh;
+    border: 1px solid #DCDCDC;
+    border-radius: 7px;
+    padding: 2vh;
+    box-shadow: 0 4px 4px -2px rgba(0, 0, 0, 0.04);
+    margin-bottom: 2vh;
+}
+
+.question-creation-container,
+.answers-creation-container{
+    display: flex;
+    flex-direction: column;
+    user-select: none;
+}
+
+.append-btn{
+    border: 1px solid #DCDCDC;
+    background: white;
+    cursor: pointer;
+    width: 18vh;
+    height: 5vh;
+    border-radius: 7px;
+    transition: all 0.5s ease;
+}
+
+.answers-creation-container button:hover{
+    background:#F0F0F0;
+}
+
+.answers-item-container{
+    display: flex;
+    flex-direction: row;
+}
+
+.answers-item-container button{
+    border: none;
+    width: 5vh;
+    height: 6vh;
+    justify-content: center;
+    background: transparent;
+    margin-left: 1vh;
+    cursor: pointer;
+}
+
+.answers-item-container button:hover{
+    background: transparent;
+}
+
+@media screen and (max-width: 790px) {
+    .append-btn {
+      border: 1px solid #DCDCDC;
+      background: white;
+      cursor: pointer;
+      width: 100%;
+      height: 5vh;
+      border-radius: 7px;
+      transition: all 0.5s ease;
+    }
+
+    .pool-creator-main-form-container{
+        width: 100%;
+        background: white;
+    }
+  }
