--- a/src/createPool/createPoolPage.css
+++ b/src/createPool/createPoolPage.css
@@ -5,6 +5,7 @@
     align-content: center;
     margin-top: 8vh;
     border-radius: 7px;
+    margin-bottom: 5vh;
 }
 
 .pool-creator-main-form-container{
@@ -12,9 +13,9 @@
     border-radius: 7px;
     border-top: 4px solid gold;
     width: 80vh;
-    height: 120vh;
     background: white;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    margin-bottom: 5vh;
 }
 
 .pool-creator-main-form{
@@ -77,7 +78,23 @@
     background: transparent;
 }
 
-@media screen and (max-width: 790px) {
+.submit-create-btn{
+    background: #3457D5;
+    border: none;
+    border-radius: 7px;
+    color: white;
+    width: 100%;
+    height: 6vh;
+    margin-top: 5vh;
+    cursor: pointer;
+    transition: all 0.5s ease;
+}
+
+.submit-create-btn:hover{
+    background: #0039a6;
+}
+
+@media screen and (max-width: 790px){
     .append-btn {
       border: 1px solid #DCDCDC;
       background: white;
