--- a/src/style.css
+++ b/src/style.css
@@ -5,11 +5,9 @@
 }
 
 .app{
-    height: 100%;
     display: flex;
     flex-direction: column;
+    min-height: 100vh;
+    height: auto;
     background:#DCDCDC;
-}
-
-.main{
 }
