--- a/front/src/navbar/navbar.css
+++ b/front/src/navbar/navbar.css
@@ -1,8 +1,12 @@
 .navbar{
+    position: fixed;
     display: flex; 
     flex-direction: row; 
     justify-content: space-between; 
     background:#303030;
+    top: 0;
+    left: 0;
+    width: 100%;
     height: 12vh;
     box-shadow: 0 2px 4px 0 rgba(0,0,0,.2);
 }
