--- a/front/src/pool/poll.css
+++ b/front/src/pool/poll.css
@@ -6,6 +6,8 @@
     background: white;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
     margin-bottom: 5vh;
+    font-family: 'Inter', sans-serif;
+    font-weight: 400;
 }
 
 .pool-answers-main-form-container h1{
@@ -57,6 +59,24 @@
     margin-top: 25px;
     cursor: pointer;
     transition: all 0.5s ease;
+}
+
+.show-results-btn{
+    background: white;
+    border: 1px solid silver;
+    border-radius: 7px;
+    color: gray;
+    width: 25%;
+    height: 37px;   
+    margin-top: 25px;
+    margin-left: 20px;
+    cursor: pointer;
+    transition: all 0.5s ease;
+}
+
+.show-results-btn:hover{
+    background: #F0F0F0;
+    border: 1px solid gray;
 }
 
 .submit-vote-btn:hover{
