--- a/front/src/results/resultsPage.css
+++ b/front/src/results/resultsPage.css
@@ -6,6 +6,8 @@
     background: white;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
     margin-bottom: 5vh;
+    font-family: 'Inter', sans-serif;
+    font-weight: 400;
 }
 
 .btns-container{
@@ -15,6 +17,10 @@
 }
 
 .btns-container button:nth-child(1){
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
     background: #3457D5;
     border: none;
     border-radius: 7px;
@@ -22,12 +28,15 @@
     width: 25%;
     height: 37px;   
     margin-top: 25px;
-    cursor: pointer;
     transition: all 0.5s ease;
 }
 
+.btns-container button:nth-child(1) p{
+    margin-left: 20px;
+}
+
 .btns-container button:nth-child(1):hover{
-    background: #0039a6;
+    /* background: #0039a6; */
 }
 
 .btns-container button:nth-child(2){
@@ -58,13 +67,17 @@
     flex-direction: column;
 }
 
+.left-content-container h1{
+    font-size: 20px;
+}
+
 .right-content-container,
 .main-content-results-container h1{
     margin: 15px;
     margin-top: 35px;
 }
 
-.main-content-results-container p:nth-child(5){
+.total{
     margin: 15px;
     margin-bottom: 35px;
 }
@@ -107,8 +120,8 @@
 
 .progress{
     align-self: center;
-    background: lightgreen;
-    height: 20px;
+    background: #32de84;
+    height: 19px;
     width: 90%;
     border-top-left-radius: 20px;
     border-bottom-left-radius: 20px;
