--- a/front/src/createPool/createPoolPage.css
+++ b/front/src/createPool/createPoolPage.css
@@ -3,40 +3,50 @@
     flex-direction: column;
     align-items: center;
     align-content: center;
-    margin-top: 8vh;
+    margin-top: 60px;
     border-radius: 7px;
-    margin-bottom: 5vh;
-    padding: 60px;
+    font-family: 'Inter', sans-serif;
+    font-weight: 400;
 }
 
+
 .pool-creator-main-form-container{
-    margin-top: 5vh;
+    margin-top: 40px;
     border-radius: 7px;
     border-top: 4px solid gold;
-    width: 80vh;
+    width: 500px;
     background: white;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-    margin-bottom: 5vh;
+    margin-bottom: 30px;
 }
 
 .pool-creator-main-form{
-    margin: 2vh;
-    margin-top: 4vh;
+    margin: 15px;
+    margin-top: 30px;
+}
+
+.pool-creator-main-form hr{
+    height: 1px;
+    border: 0;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    background: #C8C8C8;
+    font-weight: 100;
 }
 
 .pool-creator-main-form label{
-    margin-bottom: 1vh;
+    margin-bottom: 8px;
 }
 
 .pool-creator-main-form input{
-    height: 6vh;
+    height: 40px;
     width: 100%;
-    font-size: 2.3vh;
+    font-size: 17px;
     border: 1px solid #DCDCDC;
     border-radius: 7px;
-    padding: 2vh;
+    padding: 12px;
     box-shadow: 0 4px 4px -2px rgba(0, 0, 0, 0.04);
-    margin-bottom: 2vh;
+    margin-bottom: 12px;
 }
 
 .question-creation-container,
@@ -46,13 +56,18 @@
     user-select: none;
 }
 
+.question-creation-container input{
+    margin-bottom: 40px;
+}
+
 .append-btn{
     border: 1px solid #DCDCDC;
     background: white;
     cursor: pointer;
-    width: 18vh;
-    height: 5vh;
+    width: 120px;
+    height: 40px;
     border-radius: 7px;
+    margin-bottom: 30px;
     transition: all 0.5s ease;
 }
 
@@ -67,11 +82,11 @@
 
 .answers-item-container button{
     border: none;
-    width: 5vh;
-    height: 6vh;
+    width: 40px;
+    height: 40px;
     justify-content: center;
     background: transparent;
-    margin-left: 1vh;
+    margin-left: 6px;
     cursor: pointer;
 }
 
@@ -84,9 +99,8 @@
     border: none;
     border-radius: 7px;
     color: white;
-    width: 100%;
-    height: 6vh;
-    margin-top: 5vh;
+    width: 35%;
+    height: 40px;
     cursor: pointer;
     transition: all 0.5s ease;
 }
@@ -94,13 +108,13 @@
 .error-container{
     border: none;
     border-radius: 7px;
-    margin-top: 5vh;
+    margin-top: 35px;
     background: #ffdede;
-    padding: 2vh;
+    padding: 12px;
 }
 
 .error-txt{
-    font-size: 17px;
+    font-size: 15px;
     font-weight: 200;
     color: #841617;
     opacity: 1;
@@ -110,15 +124,13 @@
     background: #0039a6;
 }
 
-@media screen and (max-width: 790px){
+@media screen and (max-width: 500px){
     .append-btn {
-      border: 1px solid #DCDCDC;
-      background: white;
-      cursor: pointer;
       width: 100%;
-      height: 5vh;
-      border-radius: 7px;
-      transition: all 0.5s ease;
+    }
+
+    .submit-create-btn{
+        width: 100%;
     }
 
     .pool-creator-main-form-container{
