--- a/front/src/style.css
+++ b/front/src/style.css
@@ -9,5 +9,7 @@
     flex-direction: column;
     min-height: 100vh;
     height: auto;
-    background:#DCDCDC;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-image: url('./assets/bg.jpg');
 }
